# ray-tracing

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: rt-in-one-week_11_2.rs  rt-in-one-week_11_3.rs  rt-in-one-week_11_5.rs  rt-in-one-week_12_2.rs  rt-in-one-week_13_2.rs  rt-in-one-week_14_1.rs  rt-the-next-week_2_6.rs
src/: camera.rs  color.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  utils.rs  vec.rs
src/hittable/: sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
